SimPo 서브모듈 추가

--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 [submodule "MoE-Mamba"]
 	path = MoE-Mamba
 	url = https://github.com/kyegomez/MoE-Mamba
+[submodule "SimPO"]
+	path = SimPO
+	url = https://github.com/princeton-nlp/SimPO.git
